--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -2,18 +2,22 @@ name: Automerge
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: "*/30 * * * *"
   pull_request:
     types: [labeled]
     branches: [main]
 
 jobs:
   automerge:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        node: ["18.x"]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v3
       - name: Check for concurrent runs
-        run: ./scripts/check_concurrent_runs.sh merge-powers-ci-and-cd automerge
+        run: node ./scripts/check_concurrent_runs.js merge-powers-ci-and-cd automerge.yaml
       - name: Sleep for 30 seconds
         run: sleep 30
       - name: Log hello world
