--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check for concurrent runs
         run: node ./scripts/check_concurrent_runs.js merge-powers-ci-and-cd automerge.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
       - name: Sleep for 30 seconds
         run: sleep 30
       - name: Log hello world
