--- a/.github/workflows/pass-fail-notify.yaml
+++ b/.github/workflows/pass-fail-notify.yaml
@@ -15,6 +15,6 @@ jobs:
         uses: slackapi/slack-github-action@v1.27.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-message: 'Workflow \`${{ github.workflow }}` failed on \`${{ github.repository }}\`.'
+          slack-message: "Workflow `${{ github.workflow }}` failed on `${{ github.repository }}`."
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
