add always passing job to pass-fail to see effects on workflow status

--- a/.github/workflows/pass-fail.yaml
+++ b/.github/workflows/pass-fail.yaml
@@ -19,3 +19,10 @@ jobs:
           else
             echo "Passing"
           fi
+
+  # Always passing to check how it effects the workflow run
+  pass:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pass
+        run: echo "Passing"
