--- a/.github/workflows/pass-fail-notify.yaml
+++ b/.github/workflows/pass-fail-notify.yaml
@@ -2,7 +2,7 @@ name: Slack Notification
 
 on:
   workflow_run:
-    workflows: [Pass or Fail]
+    workflows: ["./github/workflows/pass-fail.yaml"]
     types: [completed]
 
 jobs:
@@ -28,5 +28,5 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_MESSAGE: "Workflow `${{ github.workflow }}` failed on `${{ github.repository }}`."
+          SLACK_MESSAGE: ${{ vars.SLACK_MESSAGE || format('Workflow `{0}` failed on `{1}`.', github.workflow, github.repository) }}
           SLACK_COLOR: "#FFA500"
