restore to name

--- a/.github/workflows/pass-fail-notify.yaml
+++ b/.github/workflows/pass-fail-notify.yaml
@@ -2,7 +2,7 @@ name: Slack Notification
 
 on:
   workflow_run:
-    workflows: ["pass-fail.yaml"]
+    workflows: ["Pass or Fail"]
     types: [completed]
 
 jobs:
